# dbal

./: .env  Cargo.toml  README.md  docker-compose.yml  docker.py  x.py
.github/workflows/: tests.yml
derive/: Cargo.toml
derive/src/: common.rs  into_identifier.rs  lib.rs  migrate.rs  value.rs
lib/Doctrine/DBAL/: Connection.php  Statement.php
lib/Doctrine/DBAL/Connections/: MasterSlaveConnection.php
lib/Doctrine/DBAL/Schema/: Column.php  Comparator.php  DB2SchemaManager.php  DrizzleSchemaManager.php  MySqlSchemaManager.php  OracleSchemaManager.php  PostgreSqlSchemaManager.php  SQLAnywhereSchemaManager.php  SQLServerSchemaManager.php  SqliteSchemaManager.php  Table.php
lib/Doctrine/DBAL/Sharding/SQLAzure/: SQLAzureFederationsSynchronizer.php  SQLAzureShardManager.php
lib/Doctrine/DBAL/Types/: ArrayType.php  BigIntType.php  BinaryType.php  BlobType.php  BooleanType.php  DateImmutableType.php  DateIntervalType.php  DateTimeImmutableType.php  DateTimeType.php  DateTimeTzImmutableType.php  DateTimeTzType.php  DateType.php  DecimalType.php  FloatType.php  GuidType.php  IntegerType.php  JsonType.php  ObjectType.php  SimpleArrayType.php  SmallIntType.php  StringType.php  TextType.php  TimeImmutableType.php  TimeType.php  Type.php  VarDateTimeImmutableType.php  VarDateTimeType.php
src/: configuration.rs  connection.rs  connection_factory.rs  connection_options.rs  lib.rs  parameter.rs  parameter_type.rs  private.rs  result.rs  rows.rs  sync.rs  transaction_isolation_level.rs  util.rs  value.rs
src/driver/: connection.rs  mod.rs  server_info_aware_connection.rs  statement.rs  statement_result.rs
src/driver/mysql/: driver.rs  mod.rs  rows.rs  statement.rs  statement_result.rs
src/driver/mysql/platform/: comparator.rs  mariadb.rs  mod.rs  mysql.rs  mysql_platform.rs  schema_manager.rs
src/driver/postgres/: connect.rs  driver.rs  mod.rs  platform.rs  rows.rs  statement.rs  statement_result.rs
src/driver/postgres/platform/: mod.rs  postgresql.rs  postgresql_platform.rs  schema_manager.rs
src/driver/sqlite/: driver.rs  mod.rs  platform.rs  rows.rs  statement.rs  statement_result.rs
src/driver/sqlite/platform/: mod.rs  schema_manager.rs  sqlite.rs  sqlite_platform.rs
src/error/: mod.rs
src/event/: connection_event.rs  event.rs  event_dispatcher.rs  mod.rs  schema_alter_table_add_column_event.rs  schema_alter_table_change_column_event.rs  schema_alter_table_event.rs  schema_alter_table_remove_column_event.rs  schema_alter_table_rename_column_event.rs  schema_column_definition_event.rs  schema_create_table_column_event.rs  schema_create_table_event.rs  schema_drop_table_event.rs  schema_index_definition_event.rs
src/migrate/: execution_result.rs  executor.rs  migration_plan.rs  mod.rs
src/migrate/metadata/: executed_migration.rs  mod.rs
src/platform/: create_flags.rs  date_interval_unit.rs  default.rs  lock_mode.rs  mod.rs  trim_mode.rs
src/platform/keyword/: mariadb_keywords.rs  mod.rs  mysql80_keywords.rs  mysql_keywords.rs  postgresql_keywords.rs  sqlite_keywords.rs
src/schema/: asset.rs  check_constraint.rs  column.rs  column_diff.rs  comparator.rs  foreign_key_constraint.rs  identifier.rs  index.rs  mod.rs  schema.rs  schema_config.rs  schema_diff.rs  schema_manager.rs  sequence.rs  table.rs  table_diff.rs  unique_constraint.rs  view.rs
src/tests/: connection.rs  functional_tests_helper.rs  mod.rs  platform.rs  schema_manager.rs
src/tls/: mod.rs  postgresql.rs
src/type/: bigint_type.rs  binary_type.rs  blob_type.rs  boolean_type.rs  date_type.rs  datetime_type.rs  datetime_tz_type.rs  decimal_type.rs  float_type.rs  guid_type.rs  integer_type.rs  json_type.rs  mod.rs  simple_array_type.rs  string_type.rs  text_type.rs  time_type.rs
tests/Doctrine/Tests/DBAL/: StatementTest.php
tests/Doctrine/Tests/DBAL/Functional/: BlobTest.php  MasterSlaveConnectionTest.php  StatementTest.php  TemporaryTableTest.php  TypeConversionTest.php  WriteTest.php
tests/Doctrine/Tests/DBAL/Functional/Schema/: MySqlSchemaManagerTest.php  PostgreSqlSchemaManagerTest.php  SQLServerSchemaManagerTest.php  SchemaManagerFunctionalTestCase.php  SqliteSchemaManagerTest.php
tests/Doctrine/Tests/DBAL/Performance/: TypeConversionPerformanceTest.php
tests/Doctrine/Tests/DBAL/Schema/: ColumnDiffTest.php  ColumnTest.php  ComparatorTest.php  PostgreSQLSchemaManagerTest.php  TableTest.php
tests/Doctrine/Tests/DBAL/Schema/Visitor/: RemoveNamespacedAssetsTest.php
tests/Doctrine/Tests/DBAL/Types/: ArrayTest.php  BaseDateTypeTestCase.php  BinaryTest.php  BlobTest.php  BooleanTest.php  DateImmutableTypeTest.php  DateIntervalTest.php  DateTest.php  DateTimeImmutableTypeTest.php  DateTimeTest.php  DateTimeTzImmutableTypeTest.php  DateTimeTzTest.php  DecimalTest.php  FloatTest.php  GuidTypeTest.php  IntegerTest.php  JsonTest.php  ObjectTest.php  SmallIntTest.php  StringTest.php  TimeImmutableTypeTest.php  TimeTest.php  VarDateTimeImmutableTypeTest.php  VarDateTimeTest.php
tests/Doctrine/Tests/Types/: CommentedType.php  MySqlPointType.php
tests/migrations/: version_20240110204830.rs  version_20240115002100.rs
tests/mysql/: Dockerfile
tests/mysql/certs/: cert.key
tests/postgres/: Dockerfile
tests/postgres/certs/: ca.crt  ca.key  cert.crt
