[package]
name = "creed"
description = "Extensible Database Abstraction Layer for SQL databases"
version = "0.1.0"
authors = ["Alessandro Chitolina <alekitto@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/alekitto/dbal"

[dependencies]
bitflags = "2"
chrono = "0.4"
creed_derive = { path = "./derive" }
crc = "3"
dashmap = "5"
delegate = "0.9"
fallible-iterator = "0.2"
futures = "0.3"
itertools = "0.10"
lazy_static = "1"
regex = "1"
serde_json = "1"
tokio = { version = "1", features = ["default", "macros", "rt", "rt-multi-thread"] }
url = "2"
uuid = "1"
version-compare = "0.1"

[dev-dependencies]
chrono-tz = "0.8"
env_logger = "0.10"
serial_test = "2.0"

[features]
default = ["mysql", "postgres", "sqlite"]
mysql = ["mysql_async"]
postgres = ["postgres-native-tls", "tokio-postgres", "postgres-protocol"]
runtime-tokio-native-tls = []
runtime-tokio-rustls = []
sqlite = ["rusqlite"]

[dependencies.mysql_async]
version = "0.32.2"
optional = true

[dependencies.tokio-postgres]
version = "0.7.2"
optional = true

[dependencies.postgres-native-tls]
version = "0.5.0"
optional = true

[dependencies.postgres-protocol]
version = "0.6.4"
optional = true

[dependencies.rusqlite]
version = "0.29"
optional = true
features = ["bundled", "chrono", "column_decltype", "functions", "serde_json", "uuid"]

[dev-dependencies.tokio-test]
version = "0.4"

[workspace]
members = ["derive"]
