[package]
name = "creed"
description = "Extensible Database Abstraction Layer for SQL databases"
version = "0.1.0"
authors = ["Alessandro Chitolina <alekitto@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/alekitto/dbal"

[dependencies]
bitflags = "2"
chrono = "0.4"
creed_macros = { path = "./derive" }
crc = "3"
dashmap = "5"
delegate = "0.12"
fallible-iterator = "0.2"
futures = "0.3"
hex = "0.4.3"
itertools = "0.12"
lazy_static = "1"
log = "0.4"
mysql_async = { git = "https://github.com/alekitto/mysql_async", branch = "fix/issue_283", optional = true, default-features = false }
native-tls = { version = "0.2", optional = true }
postgres-protocol = { version = "0.6", optional = true }
regex = { version = "1", features = ["default", "pattern"] }
rusqlite = { version = "0.30", optional = true, features = ["bundled", "chrono", "column_decltype", "functions", "serde_json", "uuid"] }
rustls = { version = "0.22", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
rustls-webpki = { version = "0.102", optional = true }
serde_json = "1"
socket2 = "0.5"
sqlparser = { version = "0.41", features = ["default", "visitor"] }
tokio = { version = "1", features = ["default", "fs", "macros", "rt", "rt-multi-thread"] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-postgres = { version = "0.7", optional = true }
tokio-rustls = { version = "0.25", optional = true }
url = "2"
uuid = "1"
version-compare = "0.1"
rand = "0.8.5"

[dev-dependencies]
chrono-tz = "0.8"
env_logger = "0.10"
serial_test = "3.0"
tokio-test = "0.4"

[features]
default = ["mysql", "postgres", "sqlite", "runtime-tokio-rustls"]
mysql = ["mysql_async"]
native-tls = ["dep:native-tls", "dep:tokio-native-tls", "mysql_async?/default"]
postgres = ["tokio-postgres", "postgres-protocol", "tokio-postgres/with-chrono-0_4"]
runtime-tokio-native-tls = ["native-tls"]
runtime-tokio-rustls = ["rustls"]
rustls = ["dep:rustls", "dep:rustls-native-certs", "dep:rustls-pemfile", "dep:tokio-rustls", "dep:rustls-webpki", "mysql_async?/default-rustls"]
sqlite = ["rusqlite"]
functional-tests = []

[workspace]
members = ["derive"]
